feat(main.js): create counter

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <div>
       <h1>COUNTER</h1>
-      <p>7</p>
-      <button id="lower-count">LOWER COUNT</button>
-      <button id="add-count">ADD COUNT</button>
+      <p class="counter-display">0</p>
+      <button class="lower-count">LOWER COUNT</button>
+      <button class="add-count">ADD COUNT</button>
     </div>
 
+    <script src="main.js"></script>
   </body>
 
 </html>
